# SFMLPractice

./: Animation.cpp  Animation.h  CMakeLists.txt  Player.cpp  Player.h  main.cpp
